--- a/src/styles/admin/admission/verification/Verification.module.css
+++ b/src/styles/admin/admission/verification/Verification.module.css
@@ -114,7 +114,7 @@
   position: sticky !important;
   top:0;
   left: 0;
-  z-index: -1;
+  /* z-index: -1; */
   /* flex:1; */
   min-width: 100px;
   /* text-align: center; */
